k8s/cpp_stock_ui-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cpp-stock-ui
spec:
  selector:
    app: cpp-stock-ui
  ports:
    - name: http
      port: 6082
      targetPort: 6082
  type: ClusterIP
